--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ debtcollector==0.10.0
 decorator==5.0.9
 Flask==2.0.1
 gensim==4.1.0
+gunicorn==20.1.0
 idna==3.2
 iso8601==0.1.11
 itsdangerous==2.0.1
