--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+Babel==2.12.1
 certifi==2021.5.30
 charset-normalizer==2.0.4
 click==8.0.1
-debtcollector==0.10.0
+debtcollector==2.5.0
+decorator==5.1.1
 Flask==2.0.1
 gensim==4.1.0
 gunicorn==20.1.0
@@ -11,20 +13,27 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
+msgpack-python==0.5.6
 netaddr==0.7.18
 netifaces==0.10.4
-oslo.i18n==2.7.0
+numpy==1.24.4
+oslo.i18n==6.0.0
 oslo.serialization==1.11.0
+oslo.utils==6.2.0
+packaging==23.1
 pbr==1.8.1
 pyinotify==0.9.6
+pyparsing==3.1.1
 python-dotenv==0.19.0
 pytz==2015.7
 PyYAML==5.4.1
 requests==2.26.0
+scipy==1.10.1
 self==2020.12.3
 six==1.10.0
 smart-open==5.2.1
 stevedore==1.9.0
+tzdata==2023.3
 urllib3==1.26.6
 Werkzeug==2.0.1
 wrapt==1.10.5
